// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bodySpirit should hit target and get mp 1`] = `
[
  8,
  3.12,
]
`;

exports[`bodySpirit should hit target and get mp 2`] = `2.44`;

exports[`bodySpirit should hit target and get mp 3`] = `
[
  {
    "action": "Дух тела",
    "actionType": "dmg-magic",
    "dmg": 4.88,
    "dmgType": "physical",
    "effect": undefined,
    "exp": 47,
    "hp": 3.12,
    "initiator": "asperiores",
    "msg": undefined,
    "target": "magni",
  },
]
`;

exports[`bodySpirit should not kill target 1`] = `
[
  8,
  0.1,
]
`;

exports[`bodySpirit should not kill target 2`] = `0`;

exports[`bodySpirit should not kill target 3`] = `
[
  {
    "action": "Дух тела",
    "actionType": "dmg-magic",
    "dmg": 0,
    "dmgType": "physical",
    "effect": undefined,
    "exp": 8,
    "hp": 0.1,
    "initiator": "asperiores",
    "msg": undefined,
    "target": "magni",
  },
]
`;
